    * Renamed AbstractClickHandler to AbstractViewEventClickHandler for consistency.
    * Renamed the the new Simple handlers to Abstract and move to the correct .gwt.handler package.
    * Add a new AbstractClickHandler that's not a ViewEventHandler.
    * Add tests for code in .client.gwt.handler so that tests in client projects can be simpler.

Version 3.2.0   20 Nov 2013

    * Enhance AbstractDropdownList so it's easy to set the tooltip on dropdowns.
    * Enhance DataTable to support both "standard" and "disabled" CSS styles.
    * Add new classes SimpleChangeActionHandler, SimpleRowClickActionHandler and SimpleRowClickViewEventHandler.

Version 3.1.0   18 Nov 2013

    * Add ViewDataUtils.fillLabel().
    * Enhance ViewDataUtils to accept comma-deliminated lists in string fields.
    * Enhance TabLayoutPanel and ModuleTab view to allow replacing arbitrary tabs.

Version 3.0.0   16 Nov 2013

    * Bump to 3.0.0 due to interface change.
    * Add new method GwtDateUtils.resetTimestamp().
    * Add new ViewDataUtils with utilities related to view data, especially filter criteria.
    * Add specialized typed columns (String, Integer, Date, etc.) to make client code cleaner.
    * Move all table-related widgets into their own-subpackage, because there's a lot of them now.

Version 2.4.2   27 Oct 2013

   * No functional changes, only organizational/build changes.
   * Test to make sure build works on Linux, and bump up to 0.8.6 of CedarBuild for changes.
   * Reformat build.gradle to tabstop=4, to be consistent with Eclipse editors.
   * Pull definitions for test suites back down into build.gradle, rather than CedarBuild.

Version 2.4.1   23 Oct 2013

    * Add new PropertiesUtils and HierarchicalProperties utility classes.
    * Pull up AbstractStandardDialog, AbstractWidgetUtils and NativeUtils now that it's clear they're common.

Version 2.4.0   17 Oct 2013

    * Add HttpStatusCode.AUTHENTICATION_TIMEOUT for non-standard 419 code.