@@ -5,6 +5,7 @@ Version 3.3.0   unreleased
     * Renamed the the new Simple handlers to Abstract and move to the correct .gwt.handler package.
     * Add a new AbstractClickHandler that's not a ViewEventHandler.
     * Add tests for code in .client.gwt.handler so that tests in client projects can be simpler.
+    * Add new format methods to ViewDataUtils, for consistent formatting in display labels.
 
 Version 3.2.0   20 Nov 2013
 
